使用avalon遍历创建菜单。

--- a/html/index2.html
+++ b/html/index2.html
@@ -99,7 +99,7 @@ Use search to find needed section.
         return getHtml('views/navbar.html');
     });
     $('#menu').html(function () {
-        return getHtml('views/menu.html');
+        return getHtml('views/menu2.html');
     });
 
     $('#content-wrapper').html(function () {
