--- a/html/layouts-grid2.html
+++ b/html/layouts-grid2.html
@@ -282,7 +282,7 @@ Use search to find needed section.
         return getHtml('views/navbar.html');
     });
     $('#menu').html(function () {
-        return getHtml('views/menu.html');
+        return getHtml('views/menu2.html');
     });
 </script>
 
